test/types/range/hilde/countTypeError1.good
countTypeError1.chpl:1: error: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:2: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:3: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:4: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:5: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:6: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:7: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:8: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:9: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:10: warning: can't apply '#' to a range with idxType int(32) using a count of type uint(64)
countTypeError1.chpl:11: error: can't apply '#' to a range with idxType uint(32) using a count of type uint(64)
countTypeError1.chpl:12: warning: can't apply '#' to a range with idxType uint(32) using a count of type uint(64)
